--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Qiwen Chen<br>
                 A student at Bellevue College
             </p>
-            <p><a href="html/webresources.html">Web Resource</a></p>
+            <p><a href="html/sensor_review.html">Web Resource</a></p>
         </div>
         
         <div class="col right-col">
